src/css/style.css
/* ... */
/* My services section */

.my-services {
  background-color: var(--clr-dark);
  background-size: cover;
  background-blend-mode: color-dodge;
  color: var(--fc-light);
  text-align: center;
}

.section__title--services {
  color: var(--fc-accent);
  position: relative;
}

.section__title--services::after {
  content: '';
  display: block;
  width: 2em;
  height: 1px;
  margin: 0.5em auto 1em;
  background-color: var(--fc-light);
  opacity: 0.25;
}

.services {
  margin-bottom: 4em;
}

.service {
  max-width: 500px;
  margin: 0 auto;
}

.service p {
  height: 100%;
  text-align: left;
  background-color: var(--clr-mod);
  padding: 16px;
  border-color: var(--fc-light);
  border-width: 1px;
  border-style: solid;
  outline-style: solid;
  outline-width: 1px;
  outline-color: var(--fc-light);
  transition: outline-offset 150ms ease;
}

.service p:hover,
.service p:focus {
  outline-offset: -0.3em;
}

@media (min-width: 800px) {
  .services {
    display: flex;
    max-width: 1000px;
    margin-left: auto;
    margin-right: auto;
  }

  .service + .service {
    margin-left: 2em;
  }

  .service p {
    min-height: 350px;
  }
}

/* About me section */

.about-me {
  max-width: 1000px;
  margin: 0 auto;
}

.about-me__img {
  box-shadow: var(--bs);
}

@media (min-width: 600px) {
  .about-me {
    display: grid;
    grid-template-columns: 1fr 200px;
    grid-template-areas:
      "title img"
      "subtitle img"
      "text img";
    grid-column-gap: 2em;
  }

  .section__title--about {
    grid-area: title;
  }

  .section__subtitle--about {
    grid-column: 1 / -1;
    grid-row: 2;
    position: relative;
    left: -1em;
    width: calc(100% + 2em);
    padding-left: 1em;
    padding-right: calc(200px + 4em);
  }

  .about-me__img {
    grid-area: img;
    position: relative;
    z-index: 2;
  }
}

/* My work section */

.my-work {
  background-color: var(--clr-dark);
  color: var(--fc-light);
  text-align: center;
}

.portfolio {
  position: relative;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
}

.portfolio__modal {
  position: absolute;
  margin: 0;
  width: 100%;
  top: 0;
  bottom: 0;
  background-color: rgba(255, 255, 255, 0.25);
  z-index: 3;
  display: none;
}

.modal-show {
  display: block;
}

.portfolio__content {
  position: absolute;
  margin: 1.5em;
  background-color: var(--clr-light);
  color: var(--fc-dark);
  border-radius: 0.25em;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  text-align: left;
  padding: 2em;
  overflow: scroll;
}

.portfolio__content > div {
  overflow-y: auto;
  height: 100%;
}

.portfolio__content > div > div {
  user-select: none;
  margin-top: 0.5em;
  line-height: 1.4;
}

.portfolio__content ul {
  margin: 0.5em 0;
  padding-left: 1.25em;
  list-style: circle;
}

.portfolio__item {
  position: relative;
  background-color: var(--clr-accent);
  overflow: hidden;
}

.portfolio__title {
  position: absolute;
  top: calc(50% - 1.5em);
  width: 100%;
  color: var(--fc-light);
  font-weight: var(--fw-bold);
  font-size: var(--fs-h3);
}

.portfolio__img {
  aspect-ratio: 3/2;
  transition:
    transform 750ms cubic-bezier(0.5, 0, 0.5, 1),
    opacity 200ms linear;
}

.portfolio__item:focus {
  z-index: 2;
}

.portfolio__img:hover,
.portfolio__item:focus .portfolio__img {
  transform: scale(1.2);
  opacity: 0.45;
}

@media (min-width: 600px) {
  .portfolio {
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  }
}

@media (min-width: 800px) {
  .portfolio__content {
    margin: 3em;
  }
}

/* Contact me section */

.contact-me {
  max-width: 1000px;
  margin: 0 auto;
}

.contact-me__form {
  display: flex;
  flex-direction: column;
  padding: 5px;
}

.contact-me__form.hide {
  display: none;
}

.contact-me__form ::-webkit-input-placeholder { opacity: 0; }

.contact-me__form ::-moz-placeholder { opacity: 0; }

.contact-me__form :-ms-input-placeholder { opacity: 0; }

.contact-me__form ::placeholder { opacity: 0; }

.contact-me__form label,
.contact-me__form input,
.contact-me__form textarea {
  transition: all 0.2s;
  touch-action: manipulation;
}

.contact-me__form label,
.contact-me__form button {
  font-weight: var(--fw-bold);
}

.contact-me__form input,
.contact-me__form textarea {
  margin: 1em 0 0.25em;
  cursor: text;
  border: 0;
  outline: 1px solid var(--fc-dark);
  outline-offset: 4px;
  color: var(--fc-dark);
  background-color: transparent;
}

.contact-me__form textarea {
  resize: none;
}

.contact-me__form input + label,
.contact-me__form textarea + label {
  transform: translate(0, -1.6rem);
  width: fit-content;
  color: var(--fc-dark);
}

.contact-me__form textarea + label {
  transform: translate(0, -6.2rem);
}

.contact-me__form input:focus + label,
.contact-me__form input:not(:placeholder-shown) + label,
.contact-me__form textarea:focus + label,
.contact-me__form textarea:not(:placeholder-shown) + label {
  cursor: text;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  transform-origin: left top;
  transform: translate(0, -3.1rem);
}

.contact-me__form textarea:focus + label,
.contact-me__form textarea:not(:placeholder-shown) + label {
  transform: translate(0, -7.75rem);
}

.contact-me__form button {
  color: var(--fc-dark);
  background-color: var(--clr-accent);
  font-size: 1.5rem;
  padding: 0.5em;
  border: 0;
  margin: 0 0 1.5em;
  text-transform: uppercase;
  cursor: pointer;
}

.contact-me__form button:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.contact-me__success {
  margin: 6.5em 0;
}

.contact-me__success b {
  padding-right: 0.25em;
}

.contact-me__img {
  box-shadow: var(--bs);
}
/* ... */

